#ifndef HEROGAME_IMAGE_H
#define HEROGAME_IMAGE_H


class IMage {
public:
    virtual int getWisdom() = 0;
};


#endif //HEROGAME_IMAGE_H
