#ifndef HEROGAME_IWARRIOR_H
#define HEROGAME_IWARRIOR_H


class IWarrior {
public:
    virtual int getPower() = 0;
};


#endif //HEROGAME_IWARRIOR_H
